--- a/index.html
+++ b/index.html
@@ -364,53 +364,51 @@
                             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">माँ शीतला देवी मंदिर
-                                            का
-                                            कार्यक्रम</h1>
+                                        <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">Maa Sheetla Krupa Mandir Schedule</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>प्रत्येक सुबह ३:०० से रात्रि 12:०० बजे तक भारतीय मानक समय (IST) </p>
+                                        <p>Everyday Morning 3:00 A.M. till Evening 12:00 P.M.</p>
                                         <div class="d-flex flex-column">
                                             <div class="d-flex">
                                                 <img class="mb-1 me-2" width="40" height="40"
                                                     src="./assets/images/modal.png" />
                                                 <div class="d-flex flex-column">
-                                                    <h5 class="m-0">03:00 ए.एम्</h5>
-                                                    <p>प्रातः मंदिर खुलने का समय</p>
+                                                    <h5 class="m-0">03:00 A.M.</h5>
+                                                    <p>Mandir Opens</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex">
                                                 <img class="mb-1 me-2" width="40" height="40"
                                                     src="./assets/images/modal.png" />
                                                 <div class="d-flex flex-column">
-                                                    <h5 class="m-0">06:00 ए.एम्</h5>
-                                                    <p>प्रातः आरती</p>
+                                                    <h5 class="m-0">06:00 A.M.</h5>
+                                                    <p>Morning Prayer</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex">
                                                 <img class="mb-1 me-2" width="40" height="40"
                                                     src="./assets/images/modal.png" />
                                                 <div class="d-flex flex-column">
-                                                    <h5 class="m-0">02:30 पी.एम्</h5>
-                                                    <p>शाम मन्दिर खुलने का समय</p>
+                                                    <h5 class="m-0">02:30 P.M.</h5>
+                                                    <p>Mandir Opens (Afternoon)</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex">
                                                 <img class="mb-1 me-2" width="40" height="40"
                                                     src="./assets/images/modal.png" />
                                                 <div class="d-flex flex-column">
-                                                    <h5 class="m-0">06:00 पी.एम्</h5>
-                                                    <p>शाम आरती समय</p>
+                                                    <h5 class="m-0">06:00 P.M.</h5>
+                                                    <p>Evening Prayer</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex">
                                                 <img class="mb-1 me-2" width="40" height="40"
                                                     src="./assets/images/modal.png" />
                                                 <div class="d-flex flex-column">
-                                                    <h5 class="m-0">12:00 ए.एम्</h5>
-                                                    <p>मन्दिर बंद होने का समय </p>
+                                                    <h5 class="m-0">12:00 P.M.</h5>
+                                                    <p>Mandir Closes</p>
                                                 </div>
                                             </div>
                                         </div>
