--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -364,7 +365,8 @@
                             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">Maa Sheetla Krupa Mandir Schedule</h1>
+                                        <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">Maa Sheetla Krupa
+                                            Mandir Schedule</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
@@ -417,16 +419,15 @@
                             </div>
                         </div>
                         <div class="d-flex hero-btn flex-md-row flex-column">
-                            <button class="btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
+                            <a class="my-link btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
+                            href="tel:7380611742"
+                            style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);"><img
+                                src="./assets/images/call.png" /> Call Us</a>
+                            <a href="https://maps.app.goo.gl/GrDRGHwLtwrgfMez7"
+                                class="my-link ms-1 btn hero-btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
                                 style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);">
-                                <img src="./assets/images/call.png" />
-                                Call Us
-                            </button>
-                            <button class="btn hero-btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
-                                style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);">
-                                <img src="./assets/images/map.png" />
-                                Navigate
-                            </button>
+                                <img src="./assets/images/map.png" class="me-1" />Navigate</a>
+                            </a>
                         </div>
 
                     </div>
@@ -540,16 +541,16 @@
                             </div>
                         </div>
                         <div class="d-flex hero-btn flex-md-row flex-column">
-                            <button class="btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
+                            <a class="my-link btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
+                                href="tel:7380611742"
+                                style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);"><img
+                                    src="./assets/images/call.png" /> कॉल
+                                करें</a>
+                            <a href="https://maps.app.goo.gl/GrDRGHwLtwrgfMez7"
+                                class="my-link ms-1 btn hero-btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
                                 style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);">
-                                <a class="my-link" href="tel:7380611742"><img src="./assets/images/call.png" /> कॉल
-                                    करें</a>
-                            </button>
-                            <button class="btn hero-btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
-                                style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);">
-                                <img src="./assets/images/map.png" />
-                                मार्गदर्शन
-                            </button>
+                                <img src="./assets/images/map.png" class="me-1" />मार्गदर्शन</a>
+                            </a>
                         </div>
 
                     </div>
@@ -1335,7 +1336,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः मंदिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -1345,7 +1347,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः आरती</p>
                                                     </div>
                                                 </div>
@@ -1355,7 +1358,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">मन्दिर बंद होने का समय</p>
                                                     </div>
                                                 </div>
@@ -1365,7 +1369,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम मन्दिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -1377,7 +1382,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम आरती समय</p>
                                                     </div>
                                                 </div>
@@ -1387,7 +1393,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">रात्रि शयन</p>
                                                     </div>
                                                 </div>
@@ -1399,9 +1406,10 @@
                     </div>
                     <hr style="margin-top: -10px;" class="border-2" />
                     <div class="d-flex justify-content-between flex-column flex-sm-row align-items-center text-center">
-                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित हैं 
+                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित
+                            हैं
                         </p>
-                        <p style="font-weight: 600;">वेबसाइट बाय  DIGINEXA</p>
+                        <p style="font-weight: 600;">वेबसाइट बाय DIGINEXA</p>
                     </div>
                 </div>
             </div>
