update map link

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             href="tel:7380611742"
                             style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);"><img
                                 src="./assets/images/call.png" /> Call Us</a>
-                            <a href="https://maps.app.goo.gl/GrDRGHwLtwrgfMez7"
+                            <a href="https://maps.app.goo.gl/XxJEpapbtrpYFGmG9"
                                 class="my-link ms-1 btn hero-btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
                                 style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);">
                                 <img src="./assets/images/map.png" class="me-1" />Navigate</a>
@@ -447,7 +447,7 @@
                         style="background: #ffffff; border-top-right-radius: 30px; border-top-left-radius: 30px;">
                         <p class="text-center"><span><img src="./assets/images/suchna.svg"
                                     class="me-1" /></span><strong>समय सूचना</strong> : प्रत्येक सुबह ३:०० से रात्रि
-                            12:०० बजे तक भारतीय मानक समय (IST)
+                            8:०० बजे तक भारतीय मानक समय (IST)
                         </p>
                         <div class="d-flex flex-md-row flex-column mt-2">
                             <div class="d-flex mx-4 align-items-center">
