--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                             About
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px">
-                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
+                                            <li class="fw-bold px-3">Discover our sacred journey</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./parichay.html#1">
                                                     <div class="d-flex">
@@ -96,7 +96,7 @@
                                             Temple
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px; background: #ffffff;">
-                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
+                                            <li class="fw-bold px-3">Explore our sacred Temple and Divine offerings</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./mandir.html#1">
                                                     <div class="d-flex">
