--- a/daan.html
+++ b/daan.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>माँ शीतला सदा सहाय</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style/style.css">
@@ -16,7 +18,7 @@
             <div class="english">
                 <nav class="navbar navbar-expand-xl">
                     <div class="container">
-                        <a class="navbar-brand d-flex my-2 daan-logo align-items-center" href="./index.html">
+                        <a class="navbar-brand d-flex  my-2" href="./index.html">
                             <img src="./assets/images/logo.png" alt="Bootstrap" width="60" height="55">
                             <div class="logo-text-container">
                                 <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">Prayagraj</h1>
@@ -162,9 +164,9 @@
                         <a class="navbar-brand d-flex  my-2" href="./index.html">
                             <img src="./assets/images/logo.png" alt="Bootstrap" width="60" height="55">
                             <div class="logo-text-container">
-                                <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">Prayagraj</h1>
-                                <h2 style="font-weight: 300; margin-top: 3px; font-size: 15px;">Maa Sheetla <br
-                                        class="d-block d-sm-none" />Charitable Trust</h2>
+                                <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">प्रयागराज</h1>
+                                <h2 style="font-weight: 300; margin-top: 3px; font-size: 15px;">माँ शीतला चैरिटेबल
+                                    ट्रस्ट</h2>
                             </div>
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
