--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>माँ शीतला सदा सहाय</title>
-    <!-- Add these links in the <head> section of your HTML document -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -420,9 +421,9 @@
                         </div>
                         <div class="d-flex hero-btn flex-md-row flex-column">
                             <a class="my-link btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
-                            href="tel:7380611742"
-                            style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);"><img
-                                src="./assets/images/call.png" /> Call Us</a>
+                                href="tel:7380611742"
+                                style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);"><img
+                                    src="./assets/images/call.png" /> Call Us</a>
                             <a href="https://maps.app.goo.gl/XxJEpapbtrpYFGmG9"
                                 class="my-link ms-1 btn hero-btn rounded-pill fs-white px-md-5 px-3 py-2 me-3 mb-4"
                                 style="background: #F93; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);">
@@ -956,41 +957,7 @@
                                         <img src="./assets/images/trust.jpg" class="img-fluid" />
                                     </div>
                                     <div class="mx-lg-0 mx-4 mt-5 mt-lg-0 col-lg-6 col-12 mx-auto">
-                                        <p style="font-weight: 500;">माँ शीतला चैरिटेबल ट्रस्ट तीर्थराज संगम, प्रयागराज
-                                            से
-                                            ..
-                                            किलोमीटर दूर कौशांबी जनपद के
-                                            कड़े धाम में स्थित है। यह मंदिर प्रसिद्ध कड़े धाम से महज़ .. किमी की दूरी पे
-                                            है
-                                            । इस
-                                            ट्रस्ट की स्थापना प्रातः स्मरणीय कीर्तिशेष श्री दूधनाथ गिरिधारी शुक्ल जी
-                                            द्वारा
-                                            सन्
-                                            २०१४
-                                            में की गई । ट्रस्ट स्थापना की प्रेरणा स्वर्गीय दादी जी को माँ शीतला के
-                                            साक्षात
-                                            स्वप्न
-                                            दर्शन के माध्यम से प्राप्त हुई । इस ट्रस्ट का मुख्य उद्येश्य निःस्वार्थ भाव
-                                            से,
-                                            मूलभूत
-                                            सेवाओं से वांछित रहने वाले लोगों की सेवा करना तथा उन्हें सुविधाएँ प्रदान
-                                            करना है
-                                            ।
-                                            इसके
-                                            लिए ट्रस्ट छोटे छोटे अंतरालों पर निःशुल्क मेडिकल शिविर, शिक्षा शिविर, भोज
-                                            शिविर(
-                                            भंडारा
-                                            ), धार्मिक और सामाजिक शिविरों का आयोजन करता रहता है । ट्रस्ट की विचारधारा
-                                            अधिक
-                                            से
-                                            अधिक
-                                            लोगों तक पहुँचे इसके लिए समय समय पर सांकृतिक कार्यक्रमों का भी आयोजन किया
-                                            जाता
-                                            है ।
-                                            युवाओं में कौशल विकास हो इसके लिए भी कौशल विकास शिविर का आयोजन किया जाता है।
-                                            जिससे
-                                            युवा
-                                            अपने अंदर किसी ना ....</p>
+                                        <p style="font-weight: 500;">माँ शीतला चैरिटेबल ट्रस्ट तीर्थराज संगम, प्रयागराज से 50 किलोमीटर दूर ग्राम कुंवर पति मेजा प्रयागराज उत्तर प्रदेश में स्थित है। यह मंदिर प्रसिद्ध कड़े धाम से महज़ 135 किमी की दूरी पे है । इस ट्रस्ट की स्थापना प्रातः स्मरणीय कीर्तिशेष श्री दूधनाथ गिरिधारी शुक्ल जी द्वारा 28 जनवरी सन् २०07 में की गई । ट्रस्ट स्थापना की प्रेरणा पूजनीय दादी जी को माँ शीतला के साक्षात स्वप्न दर्शन के माध्यम से प्राप्त हुई । इस ट्रस्ट का मुख्य उद्येश्य निःस्वार्थ भाव से, मूलभूत सेवाओं से वांछित रहने वाले  लोगों की सेवा करना तथा उन्हें सुविधाएँ प्रदान करना है । इसके लिए ट्रस्ट छोटे छोटे अंतरालों पर निःशुल्क  मेडिकल शिविर, शिक्षा शिविर, भोज शिविर( भंडारा ),  धार्मिक और सामाजिक शिविरों का आयोजन करता रहता है । ट्रस्ट की विचारधारा अधिक से अधिक लोगों तक पहुँचे इसके लिए समय समय पर सांकृतिक कार्यक्रमों का भी आयोजन किया जाता है । युवाओं में कौशल विकास हो इसके लिए भी कौशल विकास शिविर का आयोजन किया जाता है। जिससे युवा अपने अंदर किसी ना ...</p>
                                         <button class="btn me-auto rounded-pill py-2" style="color: #FFF;
                                     width: 160px;
                                     font-weight: 600;
