--- a/events/maha-shivratri.html
+++ b/events/maha-shivratri.html
@@ -53,7 +53,8 @@
                                                         <img src="../assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -308,7 +309,8 @@
                 <div class="container">
                     <div class="d-flex flex-column">
                         <img class="img-fluid mb-5" src="../assets/images/ayojan-carousel4/events/krupa/5.png" />
-                        <h2 class="me-auto mb-3 text-center w-100" style="color: #FF9933; font-weight: 600;">MahaShivratri
+                        <h2 class="me-auto mb-3 text-center w-100" style="color: #FF9933; font-weight: 600;">
+                            MahaShivratri
                         </h2>
                         <div class="d-flex flex-column align-items-center text-center" style="font-weight: 600;">
                             <p class="w-100">शिवजी का ध्यान मंत्र</p>
@@ -318,11 +320,25 @@
                                 विश्वाद्यं विश्वबीजं निखिलभयहरं पञ्चवक्त्रं त्रिनेत्रम्॥</p>
                         </div>
                         <div class="d-flex flex-column mt-5">
-                            <p class="p-0 m-0">Mahashivratri is an important festival in Hinduism dedicated to the worship and adoration of Lord Shiva. It is celebrated on the 13th night of the waning moon in the month of Magha, known as Mahashivratri, and observed with grandeur in various parts of India.</p>
-                            <p class="p-0 m-0">The festival at the Maa Sheetla Krupa Temple in Prayagraj holds special significance during Mahashivratri. This place, inspired by the grace and blessings of Lord Shiva, marks the occasion of Mahashivratri with grand celebrations every year.</p>
-                            <p class="p-0 m-0">On Mahashivratri at Maa Sheetla Krupa Temple, special rituals and ceremonies are performed. Devotees eagerly participate in the worship of the Shiva Lingam, expressing reverence and devotion towards Lord Shiva. Following the worship, there's a provision for special Prasad, which devotees receive after the ceremonies.</p>
-                            <p class="p-0 m-0">On this unique day of Mahashivratri, devotees gather in the temple premises. People engage in night-long prayers and worship of the Shiva Lingam with devotion and reverence. Through meditation, hymns, chants, and devotional songs, devotees offer their prayers and devotion.</p>
-                            <p class="p-0 m-0">This festival of Mahashivratri creates an atmosphere of uniqueness and tranquility. Devotees immerse themselves in meditation and seek the blessings of Lord Shiva. The celebrations of Mahashivratri at Maa Sheetla Krupa Temple fill people with peace and positive energy, integrating these into their lives with prosperity.</p>
+                            <p class="p-0 m-0">Mahashivratri is an important festival in Hinduism dedicated to the
+                                worship and adoration of Lord Shiva. It is celebrated on the 13th night of the waning
+                                moon in the month of Magha, known as Mahashivratri, and observed with grandeur in
+                                various parts of India.</p>
+                            <p class="p-0 m-0">The festival at the Maa Sheetla Krupa Temple in Prayagraj holds special
+                                significance during Mahashivratri. This place, inspired by the grace and blessings of
+                                Lord Shiva, marks the occasion of Mahashivratri with grand celebrations every year.</p>
+                            <p class="p-0 m-0">On Mahashivratri at Maa Sheetla Krupa Temple, special rituals and
+                                ceremonies are performed. Devotees eagerly participate in the worship of the Shiva
+                                Lingam, expressing reverence and devotion towards Lord Shiva. Following the worship,
+                                there's a provision for special Prasad, which devotees receive after the ceremonies.</p>
+                            <p class="p-0 m-0">On this unique day of Mahashivratri, devotees gather in the temple
+                                premises. People engage in night-long prayers and worship of the Shiva Lingam with
+                                devotion and reverence. Through meditation, hymns, chants, and devotional songs,
+                                devotees offer their prayers and devotion.</p>
+                            <p class="p-0 m-0">This festival of Mahashivratri creates an atmosphere of uniqueness and
+                                tranquility. Devotees immerse themselves in meditation and seek the blessings of Lord
+                                Shiva. The celebrations of Mahashivratri at Maa Sheetla Krupa Temple fill people with
+                                peace and positive energy, integrating these into their lives with prosperity.</p>
                         </div>
                     </div>
                 </div>
@@ -331,7 +347,8 @@
                 <div class="container">
                     <div class="d-flex flex-column">
                         <img class="img-fluid mb-5" src="../assets/images/ayojan-carousel4/events/krupa/5.png" />
-                        <h2 class="me-auto mb-3 text-center w-100" style="color: #FF9933; font-weight: 600;">महाशिवरात्रि
+                        <h2 class="me-auto mb-3 text-center w-100" style="color: #FF9933; font-weight: 600;">
+                            महाशिवरात्रि
                         </h2>
                         <div class="d-flex flex-column align-items-center text-center" style="font-weight: 600;">
                             <p class="w-100">शिवजी का ध्यान मंत्र</p>
@@ -341,24 +358,36 @@
                                 विश्वाद्यं विश्वबीजं निखिलभयहरं पञ्चवक्त्रं त्रिनेत्रम्॥</p>
                         </div>
                         <div class="d-flex flex-column mt-5">
-                            <p class="p-0 m-0" style="font-size: 14px;">महाशिवरात्रि हिन्दू धर्म में महत्वपूर्ण त्योहारों
-                                में से एक है जो महादेव शिव की पूजा और उनकी आराधना के लिए मनाया जाता है। इस दिन भगवान शिव की
-                                अद्भुतता, शक्ति और दया की पूजा की जाती है। माघ मास के कृष्ण पक्ष की त्रयोदशी को महाशिवरात्रि
+                            <p class="p-0 m-0" style="font-size: 14px;">महाशिवरात्रि हिन्दू धर्म में महत्वपूर्ण
+                                त्योहारों
+                                में से एक है जो महादेव शिव की पूजा और उनकी आराधना के लिए मनाया जाता है। इस दिन भगवान शिव
+                                की
+                                अद्भुतता, शक्ति और दया की पूजा की जाती है। माघ मास के कृष्ण पक्ष की त्रयोदशी को
+                                महाशिवरात्रि
                                 कहा जाता है, जिसे विभिन्न भागों में भारत में विशेष धूमधाम से मनाया जाता है।</p>
-                            <p class="p-0 m-0" style="font-size: 14px;">प्रयागराज के माँ शीतला कृपा मंदिर में महाशिवरात्रि
-                                का उत्सव एक विशेष रूप से मनाया जाता है। यह स्थान भगवान शिव की कृपा और आशीर्वाद से प्रेरित है
+                            <p class="p-0 m-0" style="font-size: 14px;">प्रयागराज के माँ शीतला कृपा मंदिर में
+                                महाशिवरात्रि
+                                का उत्सव एक विशेष रूप से मनाया जाता है। यह स्थान भगवान शिव की कृपा और आशीर्वाद से
+                                प्रेरित है
                                 और यहां हर साल महाशिवरात्रि को विशेष धूमधाम के साथ मनाया जाता है।</p>
-                            <p class="p-0 m-0" style="font-size: 14px;">माँ शीतला कृपा मंदिर में महाशिवरात्रि के दिन विशेष
-                                पूजा अर्चना होती है। भक्तजन शिवलिंग की पूजा के लिए बड़ी उत्साहित होते हैं और श्रद्धाभाव से
-                                भगवान शिव की आराधना करते हैं। पूजा के बाद, महाप्रसाद की विशेष व्यवस्था की जाती है, जिसमें
+                            <p class="p-0 m-0" style="font-size: 14px;">माँ शीतला कृपा मंदिर में महाशिवरात्रि के दिन
+                                विशेष
+                                पूजा अर्चना होती है। भक्तजन शिवलिंग की पूजा के लिए बड़ी उत्साहित होते हैं और श्रद्धाभाव
+                                से
+                                भगवान शिव की आराधना करते हैं। पूजा के बाद, महाप्रसाद की विशेष व्यवस्था की जाती है,
+                                जिसमें
                                 भक्तों को प्रसाद के रूप में खाना मिलता है।</p>
-                            <p class="p-0 m-0" style="font-size: 14px;">महाशिवरात्रि के इस अद्वितीय दिन पर, मंदिर के परिसर
-                                में भक्तजनों का संग्रह होता है। लोग आराधना और भक्ति भावना के साथ रात्रि भर शिवलिंग की पूजा
+                            <p class="p-0 m-0" style="font-size: 14px;">महाशिवरात्रि के इस अद्वितीय दिन पर, मंदिर के
+                                परिसर
+                                में भक्तजनों का संग्रह होता है। लोग आराधना और भक्ति भावना के साथ रात्रि भर शिवलिंग की
+                                पूजा
                                 करते हैं। ध्यान, भजन, कीर्तन और भक्ति गीतों के माध्यम से भक्तजन अपनी भक्ति का अर्पण करते
                                 हैं।</p>
                             <p class="p-0 m-0" style="font-size: 14px;">महाशिवरात्रि का यह उत्सव अद्वितीयता और शांति का
-                                माहौल बनाता है। भक्तजन शिव के ध्यान में रत रहते हैं और उनकी कृपा का आशीर्वाद प्राप्त करते
-                                हैं। माँ शीतला कृपा मंदिर में मनाए जाने वाले महाशिवरात्रि के उत्सव से लोग शांति और सकारात्मक
+                                माहौल बनाता है। भक्तजन शिव के ध्यान में रत रहते हैं और उनकी कृपा का आशीर्वाद प्राप्त
+                                करते
+                                हैं। माँ शीतला कृपा मंदिर में मनाए जाने वाले महाशिवरात्रि के उत्सव से लोग शांति और
+                                सकारात्मक
                                 ऊर्जा से भरा रहते हैं और इसे समृद्धि के साथ अपने जीवन में शामिल करते हैं।</p>
                         </div>
                     </div>
@@ -378,8 +407,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
