--- a/events/nav-ratri.html
+++ b/events/nav-ratri.html
@@ -53,7 +53,8 @@
                                                         <img src="../assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -318,11 +319,25 @@
                                 शीतले त्वं जगद्धात्री शीतलायै नमो नमः।।</p>
                         </div>
                         <div class="d-flex flex-column mt-5">
-                            <p class="p-0 m-0">Navaratri is an important festival in Hinduism dedicated to the worship of Goddess Durga, celebrated for nine consecutive days, offering an opportunity to honor and meditate upon the divine feminine energy. The festival revolves around the worship of Goddess Durga in her seven primary forms, with special significance attached to the five days of Navaratri.</p>
-                            <p class="p-0 m-0">The history, message, and significance of Navaratri are profound, inspiring spiritual enlightenment and aspirations for prosperity.</p>
-                            <p class="p-0 m-0">The festival at the Maa Sheetla Krupa Temple in Prayagraj offers a unique experience. This temple, inspired by the blessings of Lord Shiva and Goddess Durga, witnesses devotees gathering to offer their prayers and devotion during this festive period.</p>
-                            <p class="p-0 m-0">During this exceptional occasion of Navaratri, devotees worship the nine forms of Goddess Durga, including Shailputri, Brahmacharini, Chandraghanta, Kushmanda, Skandamata, Katyayani, Kaalratri, Mahagauri, and Siddhidatri. Each day, devotees worship one of these forms, seeking the blessings of Mother Durga.</p>
-                            <p class="p-0 m-0">Various cultural programs are organized during Navaratri at Maa Sheetla Krupa Temple, involving devotional singing, storytelling, and cultural presentations. Devotees immerse themselves in the religious aspects of this unique festival, experiencing remarkable prosperity and tranquility.</p>
+                            <p class="p-0 m-0">Navaratri is an important festival in Hinduism dedicated to the worship
+                                of Goddess Durga, celebrated for nine consecutive days, offering an opportunity to honor
+                                and meditate upon the divine feminine energy. The festival revolves around the worship
+                                of Goddess Durga in her seven primary forms, with special significance attached to the
+                                five days of Navaratri.</p>
+                            <p class="p-0 m-0">The history, message, and significance of Navaratri are profound,
+                                inspiring spiritual enlightenment and aspirations for prosperity.</p>
+                            <p class="p-0 m-0">The festival at the Maa Sheetla Krupa Temple in Prayagraj offers a unique
+                                experience. This temple, inspired by the blessings of Lord Shiva and Goddess Durga,
+                                witnesses devotees gathering to offer their prayers and devotion during this festive
+                                period.</p>
+                            <p class="p-0 m-0">During this exceptional occasion of Navaratri, devotees worship the nine
+                                forms of Goddess Durga, including Shailputri, Brahmacharini, Chandraghanta, Kushmanda,
+                                Skandamata, Katyayani, Kaalratri, Mahagauri, and Siddhidatri. Each day, devotees worship
+                                one of these forms, seeking the blessings of Mother Durga.</p>
+                            <p class="p-0 m-0">Various cultural programs are organized during Navaratri at Maa Sheetla
+                                Krupa Temple, involving devotional singing, storytelling, and cultural presentations.
+                                Devotees immerse themselves in the religious aspects of this unique festival,
+                                experiencing remarkable prosperity and tranquility.</p>
                         </div>
                     </div>
                 </div>
@@ -342,20 +357,27 @@
                         </div>
                         <div class="d-flex flex-column mt-5">
                             <p class="p-0 m-0">नवरात्रि हिन्दू धर्म में मां दुर्गा की आराधना का एक
-                                महत्वपूर्ण त्योहार है, जो नौ दिनों तक मनाया जाता है और मां शक्ति की उपासना का अवसर प्रदान
-                                करता है। यह त्योहार सात प्रमुख रूपों में देवी दुर्गा की पूजा का है, जिनमें नवरात्रि के पांच
-                                दिन विशेष महत्वपूर्ण होते हैं। नवरात्रि का इतिहास, संदेश और अर्थ से भरा हुआ है जो आत्मा की
+                                महत्वपूर्ण त्योहार है, जो नौ दिनों तक मनाया जाता है और मां शक्ति की उपासना का अवसर
+                                प्रदान
+                                करता है। यह त्योहार सात प्रमुख रूपों में देवी दुर्गा की पूजा का है, जिनमें नवरात्रि के
+                                पांच
+                                दिन विशेष महत्वपूर्ण होते हैं। नवरात्रि का इतिहास, संदेश और अर्थ से भरा हुआ है जो आत्मा
+                                की
                                 उद्दीपना करता है और समृद्धि की कामना करता है।</p>
                             <p class="p-0 m-0">प्रयागराज के मां शीतला कृपा मंदिर में नवरात्रि का
-                                उत्सव एक अद्वितीय अनुभव प्रदान करता है। मां शीतला कृपा मंदिर भगवान शिव और मां दुर्गा की कृपा
-                                से प्रेरित है, और इस त्योहार के दौरान भक्तजन यहां आकर अपनी श्रद्धांजलि अर्पित करते हैं।</p>
+                                उत्सव एक अद्वितीय अनुभव प्रदान करता है। मां शीतला कृपा मंदिर भगवान शिव और मां दुर्गा की
+                                कृपा
+                                से प्रेरित है, और इस त्योहार के दौरान भक्तजन यहां आकर अपनी श्रद्धांजलि अर्पित करते हैं।
+                            </p>
                             <p class="p-0 m-0">नवरात्रि के इस अद्वितीय अवसर पर, मां दुर्गा के नौ
-                                रूपों की पूजा की जाती है, जिनमें शैलपुत्री, ब्रह्मचारिणी, चंद्रघंटा, कुष्माण्डा, स्कंदमाता,
+                                रूपों की पूजा की जाती है, जिनमें शैलपुत्री, ब्रह्मचारिणी, चंद्रघंटा, कुष्माण्डा,
+                                स्कंदमाता,
                                 कात्यायनी, कालरात्रि, महागौरी, और सिद्धिदात्री शामिल हैं। प्रतिदिन भक्तजन एक रूप की पूजा
                                 करते हैं और माँ दुर्गा के आशीर्वाद का आग्रह प्राप्त करते हैं।</p>
                             <p class="p-0 m-0">मां शीतला कृपा मंदिर में नवरात्रि के दौरान विभिन्न
                                 सांस्कृतिक कार्यक्रमों का आयोजन होता है, जिसमें भजन-कीर्तन, कथा वाचन, और सांस्कृतिक
-                                प्रस्तुतियां शामिल हैं। भक्तजन धर्मिक रूप से इस अद्वितीय पर्व का आनंद लेते हैं और एक अद्भुत
+                                प्रस्तुतियां शामिल हैं। भक्तजन धर्मिक रूप से इस अद्वितीय पर्व का आनंद लेते हैं और एक
+                                अद्भुत
                                 सामृद्धि और शांति का अनुभव करते हैं।</p>
                             <p class="p-0 m-0">इस उत्सव के दौरान मंदिर में भक्तजनों के बीच भंडारा
                                 भी किया जाता है, जिससे लोग एक-दूसरे के साथ सांगीतिकता और मिलनसर वातावरण में महत्वपूर्ण
@@ -378,8 +400,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
