--- a/mandir.html
+++ b/mandir.html
@@ -53,7 +53,8 @@
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -978,8 +979,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
@@ -1296,7 +1297,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः मंदिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -1306,7 +1308,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः आरती</p>
                                                     </div>
                                                 </div>
@@ -1316,7 +1319,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">मन्दिर बंद होने का समय</p>
                                                     </div>
                                                 </div>
@@ -1326,7 +1330,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम मन्दिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -1338,7 +1343,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम आरती समय</p>
                                                     </div>
                                                 </div>
@@ -1348,7 +1354,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">रात्रि शयन</p>
                                                     </div>
                                                 </div>
@@ -1360,9 +1367,10 @@
                     </div>
                     <hr style="margin-top: -10px;" class="border-2" />
                     <div class="d-flex justify-content-between flex-column flex-sm-row align-items-center text-center">
-                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित हैं 
+                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित
+                            हैं
                         </p>
-                        <p style="font-weight: 600;">वेबसाइट बाय  DIGINEXA</p>
+                        <p style="font-weight: 600;">वेबसाइट बाय DIGINEXA</p>
                     </div>
                 </div>
             </div>
