--- a/daan.html
+++ b/daan.html
@@ -53,7 +53,8 @@
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -440,8 +441,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
@@ -758,7 +759,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः मंदिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -768,7 +770,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः आरती</p>
                                                     </div>
                                                 </div>
@@ -778,7 +781,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">मन्दिर बंद होने का समय</p>
                                                     </div>
                                                 </div>
@@ -788,7 +792,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम मन्दिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -800,7 +805,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम आरती समय</p>
                                                     </div>
                                                 </div>
@@ -810,7 +816,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">रात्रि शयन</p>
                                                     </div>
                                                 </div>
@@ -822,9 +829,10 @@
                     </div>
                     <hr style="margin-top: -10px;" class="border-2" />
                     <div class="d-flex justify-content-between flex-column flex-sm-row align-items-center text-center">
-                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित हैं 
+                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित
+                            हैं
                         </p>
-                        <p style="font-weight: 600;">वेबसाइट बाय  DIGINEXA</p>
+                        <p style="font-weight: 600;">वेबसाइट बाय DIGINEXA</p>
                     </div>
                 </div>
             </div>
