--- a/index.html
+++ b/index.html
@@ -957,7 +957,19 @@
                                         <img src="./assets/images/trust.jpg" class="img-fluid" />
                                     </div>
                                     <div class="mx-lg-0 mx-4 mt-5 mt-lg-0 col-lg-6 col-12 mx-auto">
-                                        <p style="font-weight: 500;">माँ शीतला चैरिटेबल ट्रस्ट तीर्थराज संगम, प्रयागराज से 50 किलोमीटर दूर ग्राम कुंवर पति मेजा प्रयागराज उत्तर प्रदेश में स्थित है। यह मंदिर प्रसिद्ध कड़े धाम से महज़ 135 किमी की दूरी पे है । इस ट्रस्ट की स्थापना प्रातः स्मरणीय कीर्तिशेष श्री दूधनाथ गिरिधारी शुक्ल जी द्वारा 28 जनवरी सन् २०07 में की गई । ट्रस्ट स्थापना की प्रेरणा पूजनीय दादी जी को माँ शीतला के साक्षात स्वप्न दर्शन के माध्यम से प्राप्त हुई । इस ट्रस्ट का मुख्य उद्येश्य निःस्वार्थ भाव से, मूलभूत सेवाओं से वांछित रहने वाले  लोगों की सेवा करना तथा उन्हें सुविधाएँ प्रदान करना है । इसके लिए ट्रस्ट छोटे छोटे अंतरालों पर निःशुल्क  मेडिकल शिविर, शिक्षा शिविर, भोज शिविर( भंडारा ),  धार्मिक और सामाजिक शिविरों का आयोजन करता रहता है । ट्रस्ट की विचारधारा अधिक से अधिक लोगों तक पहुँचे इसके लिए समय समय पर सांकृतिक कार्यक्रमों का भी आयोजन किया जाता है । युवाओं में कौशल विकास हो इसके लिए भी कौशल विकास शिविर का आयोजन किया जाता है। जिससे युवा अपने अंदर किसी ना ...</p>
+                                        <p style="font-weight: 500;">माँ शीतला चैरिटेबल ट्रस्ट तीर्थराज संगम, प्रयागराज
+                                            से 50 किलोमीटर दूर ग्राम कुंवर पति मेजा प्रयागराज उत्तर प्रदेश में स्थित है।
+                                            यह मंदिर प्रसिद्ध कड़े धाम से महज़ 135 किमी की दूरी पे है । इस ट्रस्ट की
+                                            स्थापना प्रातः स्मरणीय कीर्तिशेष श्री दूधनाथ गिरिधारी शुक्ल जी द्वारा 28
+                                            जनवरी सन् २०07 में की गई । ट्रस्ट स्थापना की प्रेरणा पूजनीय दादी जी को माँ
+                                            शीतला के साक्षात स्वप्न दर्शन के माध्यम से प्राप्त हुई । इस ट्रस्ट का मुख्य
+                                            उद्येश्य निःस्वार्थ भाव से, मूलभूत सेवाओं से वांछित रहने वाले लोगों की सेवा
+                                            करना तथा उन्हें सुविधाएँ प्रदान करना है । इसके लिए ट्रस्ट छोटे छोटे अंतरालों
+                                            पर निःशुल्क मेडिकल शिविर, शिक्षा शिविर, भोज शिविर( भंडारा ), धार्मिक और
+                                            सामाजिक शिविरों का आयोजन करता रहता है । ट्रस्ट की विचारधारा अधिक से अधिक
+                                            लोगों तक पहुँचे इसके लिए समय समय पर सांकृतिक कार्यक्रमों का भी आयोजन किया
+                                            जाता है । युवाओं में कौशल विकास हो इसके लिए भी कौशल विकास शिविर का आयोजन
+                                            किया जाता है। जिससे युवा अपने अंदर किसी ना ...</p>
                                         <button class="btn me-auto rounded-pill py-2" style="color: #FFF;
                                     width: 160px;
                                     font-weight: 600;
@@ -985,8 +997,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
