--- a/parichay.html
+++ b/parichay.html
@@ -48,17 +48,20 @@
                                         <ul class="dropdown-menu" style="width:240px">
                                             <li class="fw-bold px-3">Discover our sacred journey</li>
                                             <hr class="dropdown-divider">
-                                            <li><a class="dropdown-item" href="./parichay.html#1" onclick="changeDiv(1)">
+                                            <li><a class="dropdown-item" href="./parichay.html#1"
+                                                    onclick="changeDiv(1)">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="./parichay.html#2" onclick="changeDiv(2)">
+                                            <li><a class="dropdown-item" href="./parichay.html#2"
+                                                    onclick="changeDiv(2)">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
@@ -69,7 +72,8 @@
                                                         </div>
                                                     </div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="./parichay.html#3" onclick="changeDiv(3)">
+                                            <li><a class="dropdown-item" href="./parichay.html#3"
+                                                    onclick="changeDiv(3)">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
@@ -191,7 +195,8 @@
                                         <ul class="dropdown-menu" style="width:240px">
                                             <li class="fw-bold px-3">हमारी पवित्र यात्रा का अन्वेषण करें</li>
                                             <hr class="dropdown-divider">
-                                            <li><a class="dropdown-item" href="./parichay.html#1" onclick="changeDiv(1)">
+                                            <li><a class="dropdown-item" href="./parichay.html#1"
+                                                    onclick="changeDiv(1)">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
@@ -201,7 +206,8 @@
                                                         </div>
                                                     </div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="./parichay.html#2" onclick="changeDiv(2)">
+                                            <li><a class="dropdown-item" href="./parichay.html#2"
+                                                    onclick="changeDiv(2)">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
@@ -212,7 +218,8 @@
                                                         </div>
                                                     </div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="./parichay.html#3" onclick="changeDiv(3)">
+                                            <li><a class="dropdown-item" href="./parichay.html#3"
+                                                    onclick="changeDiv(3)">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
@@ -362,8 +369,8 @@
                                 <div class="d-flex flex-column mt-4">
                                     <p>The Maa Sheetla Charitable Trust is located in the village Kunwarpati Meja, about
                                         50 kilometers from Tirtharaj Sangam in Prayagraj, Uttar Pradesh. This temple is
-                                        situated at a distance of merely 135 km from the renowned Kashi Vishwanath
-                                        Temple. The trust was established on January 28, 2007, by the memorable efforts
+                                        situated at a distance of merely 135 km from the renowned Kade dham temple. The
+                                        trust was established on January 28, 2007, by the memorable efforts
                                         of Shri Dudhanath Giridhari Shukla. The inspiration for founding the trust came
                                         through a divine dream experienced by Revered Dadi Ji, where she received direct
                                         guidance from Maa Sheetla.
@@ -643,8 +650,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
@@ -678,7 +685,7 @@
                         <div class="d-flex flex-column pe-3 mb-4">
                             <p class="fw-bold">About</p>
                             <ul class="list-unstyled">
-                                <li><a class="dropdown-item" href="./parichay.html#1"  onclick="changeDiv(1)">
+                                <li><a class="dropdown-item" href="./parichay.html#1" onclick="changeDiv(1)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
@@ -688,7 +695,7 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="./parichay.html#3"  onclick="changeDiv(3)">
+                                <li><a class="dropdown-item" href="./parichay.html#3" onclick="changeDiv(3)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
@@ -882,7 +889,7 @@
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
-                                                <h5 class="m-0 fw-bold" style="font-size: 13px;" >परिचय</h5>
+                                                <h5 class="m-0 fw-bold" style="font-size: 13px;">परिचय</h5>
                                                 <p class="footer-subtext">माँ शीतला चैरिटेबल ट्रस्ट</p>
                                             </div>
                                         </div>
@@ -961,7 +968,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">03:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः मंदिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -971,7 +979,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">प्रातः आरती</p>
                                                     </div>
                                                 </div>
@@ -981,7 +990,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">12:00 ए.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">मन्दिर बंद होने का समय</p>
                                                     </div>
                                                 </div>
@@ -991,7 +1001,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">02:30 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम मन्दिर खुलने का समय</p>
                                                     </div>
                                                 </div>
@@ -1003,7 +1014,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">06:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">शाम आरती समय</p>
                                                     </div>
                                                 </div>
@@ -1013,7 +1025,8 @@
                                                     <img src="./assets/images/clock.svg" width="30" height="30"
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
-                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्</h5>
+                                                        <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 पी.एम्
+                                                        </h5>
                                                         <p class="footer-subtext">रात्रि शयन</p>
                                                     </div>
                                                 </div>
@@ -1025,9 +1038,10 @@
                     </div>
                     <hr style="margin-top: -10px;" class="border-2" />
                     <div class="d-flex justify-content-between flex-column flex-sm-row align-items-center text-center">
-                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित हैं 
+                        <p style="font-weight: 600;">©2024 माँ शीतला चैरिटेबल ट्रस्ट ,प्रयागराज | सभी अधिकार सुरक्षित
+                            हैं
                         </p>
-                        <p style="font-weight: 600;">वेबसाइट बाय  DIGINEXA</p>
+                        <p style="font-weight: 600;">वेबसाइट बाय DIGINEXA</p>
                     </div>
                 </div>
             </div>
