--- a/sevakary/medical-camp.html
+++ b/sevakary/medical-camp.html
@@ -53,7 +53,8 @@
                                                         <img src="../assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -495,8 +496,8 @@
                                             class="d-block d-sm-none" />Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
