--- a/sevakary/tree-plantation.html
+++ b/sevakary/tree-plantation.html
@@ -23,7 +23,7 @@
                             <div class="logo-text-container">
                                 <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">Prayagraj</h1>
                                 <h2 style="font-weight: 300; margin-top: 3px; font-size: 15px;">Maa Sheetla <br
-                                        class="d-block d-sm-none" />Charitable Trust</h2>
+                                        class="d-block d-sm-none">Charitable Trust</h2>
                             </div>
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -53,7 +53,8 @@
                                                         <img src="../assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
+                                                            </h5>
                                                             <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
@@ -151,7 +152,7 @@
                                 <div class="nav-btn-container">
                                     <button class="menu-btn btn rounded-circle ms-3 me-2 p-0 lang-btn">अ/En</button>
                                     <button class="menu-btn btn rounded-circle p-0"><a href="tel:7380611742"><img
-                                                src="../assets/images/call.png" /></a></button>
+                                                src="../assets/images/call.png"></a></button>
                                 </div>
                             </div>
                         </div>
@@ -295,7 +296,7 @@
                                 <div class="nav-btn-container">
                                     <button class="menu-btn btn rounded-circle ms-3 me-2 p-0 lang-btn">अ/En</button>
                                     <button class="menu-btn btn rounded-circle p-0"><a href="tel:7380611742"><img
-                                                src="../assets/images/call.png" /></a></button>
+                                                src="../assets/images/call.png"></a></button>
                                 </div>
                             </div>
                         </div>
@@ -451,15 +452,15 @@
                     <div class="d-flex flex-row flex-wrap flex-xl-nowrap justify-content-start">
                         <div class="d-flex flex-column pe-3 mb-4">
                             <a class="navbar-brand d-flex align-items-center mb-3" href="../index.html">
-                                <img src="../assets/images/logo.png" alt="Bootstrap" width="60" height="55">
+                                <img src="../assets/images/logo.png" alt="Bootstrap" width="60" height="55" />
                                 <div class="logo-text-container">
                                     <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">Prayagraj</h1>
                                     <h2 style="font-weight: 300; margin-top: 3px; font-size: 15px;">Maa Sheetla <br
-                                            class="d-block d-sm-none" />Charitable Trust</h2>
+                                            class="d-block d-sm-none">Charitable Trust</h2>
                                 </div>
                             </a>
-                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">“Sona Bhwan “,Kunwarpatti ,
-                                Jevaniya , Meza , Prayagraj</h3>
+                            <h3 style="font-weight: 600; font-size: 16px;" class="mb-3">"Sona Bhawan", Kunwarpatti,
+                                Jevaniya, Meja, Prayagraj</h3>
                             <div class="socials mb-3">
                                 <a style="text-decoration: none;" class="me-3"
                                     href="https://www.facebook.com/maasheetlaorg?mibextid=kFxxJD" target="_blank">
@@ -681,8 +682,7 @@
                                 <div class="d-flex">
                                     <button class="btn rounded-circle"
                                         style="background: #F93; height: 40px; width: 40px;"><img
-                                            style="width: 14px; height: 14px;"
-                                            src="../assets/images/call.png" /></button>
+                                            style="width: 14px; height: 14px;" src="../assets/images/call.png"></button>
                                     <p class="my-auto ms-2 fw-bold">7380611742</p>
                                 </div>
                                 <button class="btn p-0 rounded-circle fs-white ms-5 lang-btn"
